--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TestingWithToys</string>
+
+    <string name="task_no_title">No title provided</string>
+    <string name="task_no_description">No description provided</string>
 </resources>
